fixed spacing for smaller screen sizes

--- a/src/layouts/experience.css
+++ b/src/layouts/experience.css
@@ -57,7 +57,7 @@
     font-size: 1rem;
   }
   .exp-card-container {
-    height: 62vh;
+    height: 68vh;
   }
   .experience-header h1::after {
     left: 30%;
